# Python-Bindings

./: .gitignore  README.md
math_pybind/: CMakeLists.txt  setup.py
math_pybind/example/: test.py
math_pybind/src/math_ops/: math.cpp  simple_ops.cpp
pymath/: CMakeLists.txt  modules.cpp  setup.py
pymath/example/: test.py
pymath/math/: CMakeLists.txt
pymath/math/include/math/: cuda_ops.hpp  simple_ops.hpp
pymath/math/src/: simple_ops.cpp
pymath/math/src/cuda/: simple_ops.cu
pymath/math_exe/: CMakeLists.txt  main.cpp
